Make fatals issue 'Fatal Errors'

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -2875,7 +2875,7 @@
 \newcommand\fxenglisherrorname{Error}
 \newcommand\fxenglisherrorsname{Errors}
 \newcommand\fxenglishfatalname{Fatal}
-\newcommand\fxenglishfatalsname{Fatals}
+\newcommand\fxenglishfatalsname{Fatal Errors}
 \newcommand\englishlistfixmename{List of Corrections}
 
 %    \end{macrocode}
@@ -2913,7 +2913,7 @@
 \newcommand\fxfrencherrorname{Erreur}
 \newcommand\fxfrencherrorsname{Erreurs}
 \newcommand\fxfrenchfatalname{Fatal}
-\newcommand\fxfrenchfatalsname{Fatales}
+\newcommand\fxfrenchfatalsname{Erreurs Fatales}
 \newcommand\frenchlistfixmename{Liste des Corrections}
 
 %    \end{macrocode}
