Added missing translations

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -2875,7 +2875,7 @@
 \newcommand\fxenglisherrorname{Error}
 \newcommand\fxenglisherrorsname{Errors}
 \newcommand\fxenglishfatalname{Fatal}
-\newcommand\fxenglishfatalsname{Fatal Errors}
+\newcommand\fxenglishfatalsname{Fatal errors}
 \newcommand\englishlistfixmename{List of Corrections}
 
 %    \end{macrocode}
@@ -2913,7 +2913,7 @@
 \newcommand\fxfrencherrorname{Erreur}
 \newcommand\fxfrencherrorsname{Erreurs}
 \newcommand\fxfrenchfatalname{Fatal}
-\newcommand\fxfrenchfatalsname{Erreurs Fatales}
+\newcommand\fxfrenchfatalsname{Erreurs fatales}
 \newcommand\frenchlistfixmename{Liste des Corrections}
 
 %    \end{macrocode}
@@ -2950,8 +2950,8 @@
 \newcommand\fxspanishwarningsname{Avisos}
 \newcommand\fxspanisherrorname{Error}
 \newcommand\fxspanisherrorsname{Errores}
-\newcommand\fxspanishfatalname{FIXME}
-\newcommand\fxspanishfatalsname{FIXME}
+\newcommand\fxspanishfatalname{Fatal}
+\newcommand\fxspanishfatalsname{Errores fatales}
 \newcommand\spanishlistfixmename{Lista de Correcciones}
 
 %    \end{macrocode}
@@ -2987,8 +2987,8 @@
 \newcommand\fxitalianwarningsname{Avvisi}
 \newcommand\fxitalianerrorname{Errore}
 \newcommand\fxitalianerrorsname{Errori}
-\newcommand\fxitalianfatalname{FIXME}
-\newcommand\fxitalianfatalsname{FIXME}
+\newcommand\fxitalianfatalname{Fatale}
+\newcommand\fxitalianfatalsname{Errori fatali}
 \newcommand\italianlistfixmename{Corrigenda}
 
 %    \end{macrocode}
@@ -3025,8 +3025,8 @@
 \newcommand\fxgermanwarningsname{Warnungen}
 \newcommand\fxgermanerrorname{Fehler}
 \newcommand\fxgermanerrorsname{Fehler}
-\newcommand\fxgermanfatalname{FIXME}
-\newcommand\fxgermanfatalsname{FIXME}
+\newcommand\fxgermanfatalname{Verh\"angnisvoll}
+\newcommand\fxgermanfatalsname{Verh\"angnisvolle fehler}
 \newcommand\germanlistfixmename{Verzeichnis der Korrekturen}
 
 %    \end{macrocode}
@@ -3063,8 +3063,8 @@
 \newcommand\fxdanishwarningsname{Advarsler}
 \newcommand\fxdanisherrorname{Fejl}
 \newcommand\fxdanisherrorsname{Fejl}
-\newcommand\fxdanishfatalname{FIXME}
-\newcommand\fxdanishfatalsname{FIXME}
+\newcommand\fxdanishfatalname{D\o delige}
+\newcommand\fxdanishfatalsname{Sk\ae bnesvangre fejl}
 \newcommand\danishlistfixmename{Rettelser}
 
 %    \end{macrocode}
@@ -3096,12 +3096,12 @@
 %    \begin{macrocode}
 \newcommand\fxcroatiannotename{Poruka}
 \newcommand\fxcroatiannotesname{Poruke}
-\newcommand\fxcroatianwarningname{Upozorenje}
-\newcommand\fxcroatianwarningsname{Upozorenja}
+\newcommand\fxcroatianwarningname{Upozorenja}
+\newcommand\fxcroatianwarningsname{Upozorenje}
 \newcommand\fxcroatianerrorname{Gre\v ska}
 \newcommand\fxcroatianerrorsname{Greske}
-\newcommand\fxcroatianfatalname{FIXME}
-\newcommand\fxcroatianfatalsname{FIXME}
+\newcommand\fxcroatianfatalname{Fatalan}
+\newcommand\fxcroatianfatalsname{Kobne gre\v ske}
 \newcommand\croatianlistfixmename{Popis korekcija}
 
 %    \end{macrocode}
