--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1,4 +1,4 @@
-% \iffalse                                                 -*- mode: LaTeX -*-
+% \iffalse
 %
 % fixme.dtx --- Doc file for the FiXme package (code and documentation)
 %
@@ -137,7 +137,9 @@
 % \fxmarkright
 %
 % \date{\texttt{\fileversion{} (\filedate)}}
-% \title{\fx{} -- Collaborative annotation tool for \LaTeX{}}
+% \title{\fx{} -- Collaborative annotation tool for \LaTeX\footnote{%
+%     \fx homepage: %
+%     \texttt{http://www.lrde.epita.fr/\~{}didier/software/latex.php\#fixme}}}
 % \author{Didier Verna\\
 %   \texttt{mailto:didier@lrde.epita.fr}\\
 %   \texttt{http://www.lrde.epita.fr/\~{}didier/}}
@@ -170,7 +172,9 @@
 % \section{Installation}
 % \subsection{Extraction}
 % If you are building \fx from the tarball you need to execute the following
-% steps in order to extract the necessary files:
+% steps in order to extract the necessary files. \fx also requires the
+% \textsf{DoX} package (version 2.0, release date 2009/09/21 or later), to
+% build. It is not required to use the paclage.
 % \begin{verbatim}
 % [pdf]latex fixme.ins
 % [pdf]latex fixme.dtx
@@ -192,6 +196,15 @@
 % [TEXMF]/tex/latex/fixme/themes/fxtheme*.sty
 % [TEXMF]/doc/latex/fixme/fixme.[pdf|dvi]
 % \end{verbatim}
+%
+% \subsection{\auctex support}
+% \auctex is a powerful major mode for editing \TeX{} documents in
+% \emacs. In particular, it provides automatic completion of command names
+% once they are known. \fx supports \auctex by providing a style file named
+% \texttt{fixme.el} which contains \auctex definitions for the relevant
+% commands. This file should be installed in a place where \auctex can find it
+% (usually in a subdirectory of your \LaTeX{} styles directory). Please refer
+% to the \auctex documentation for more information on this.
 %
 % \section{Features summary}
 % If you're new to \fx, you might be interested in a brief summary of the
@@ -235,9 +248,6 @@
 % depends on \texttt{xspace}, \texttt{ifthen}, \texttt{verbatim} and
 % \texttt{xkeyval} (version 2.5f, release date 2006/11/18 or later).
 %
-% \fx also requires the \textsf{DoX} package (version 2.0, release date
-% 2009/09/21 or later), but only for the build phase.
-%
 % \subsubsection{Loading the package}
 % In order to load \fx, simply say |\usepackage[|\meta{options}|]{fixme}|
 % in the preamble of your document. There is an important number of options
@@ -266,15 +276,6 @@
 % understood by the annotation commands or environments described in
 % section \sectionref{sec:manual:insertion}. The effect is then local to that
 % particular command.
-%
-% \subsubsection{\auctex support}
-% \auctex is a powerful major mode for editing \TeX{} documents in
-% \emacs. In particular, it provides automatic completion of command names
-% once they are known. \fx supports \auctex by providing a style file named
-% \texttt{fixme.el} which contains \auctex definitions for the relevant
-% commands. This file should be installed in a place where \auctex can find it
-% (usually in a subdirectory of your \LaTeX{} styles directory). Please refer
-% to the \auctex documentation for more information on this.
 %
 % \subsection{Inserting \fx notes\label{sec:manual:insertion}}
 % \subsubsection{Commands}
