--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1280,7 +1280,6 @@
 % \DescribeMacro[noprint]{\fxenglisherrorsname}
 % \DescribeMacro[noprint]{\fxenglishfatalname}
 % \DescribeMacro[noprint]{\fxenglishfatalsname}
-% \DescribeMacro[noprint]{\englishlistfixmename}
 % \DescribeMacro[noprint]{\fxfrenchnotename}
 % \DescribeMacro[noprint]{\fxfrenchnotesname}
 % \DescribeMacro[noprint]{\fxfrenchwarningname}
@@ -1289,7 +1288,6 @@
 % \DescribeMacro[noprint]{\fxfrencherrorsname}
 % \DescribeMacro[noprint]{\fxfrenchfatalname}
 % \DescribeMacro[noprint]{\fxfrenchfatalsname}
-% \DescribeMacro[noprint]{\frenchlistfixmename}
 % \DescribeMacro[noprint]{\fxspanishnotename}
 % \DescribeMacro[noprint]{\fxspanishnotesname}
 % \DescribeMacro[noprint]{\fxspanishwarningname}
@@ -1298,7 +1296,6 @@
 % \DescribeMacro[noprint]{\fxspanisherrorsname}
 % \DescribeMacro[noprint]{\fxspanishfatalname}
 % \DescribeMacro[noprint]{\fxspanishfatalsname}
-% \DescribeMacro[noprint]{\spanishlistfixmename}
 % \DescribeMacro[noprint]{\fxitaliannotename}
 % \DescribeMacro[noprint]{\fxitaliannotesname}
 % \DescribeMacro[noprint]{\fxitalianwarningname}
@@ -1307,7 +1304,6 @@
 % \DescribeMacro[noprint]{\fxitalianerrorsname}
 % \DescribeMacro[noprint]{\fxitalianfatalname}
 % \DescribeMacro[noprint]{\fxitalianfatalsname}
-% \DescribeMacro[noprint]{\italianlistfixmename}
 % \DescribeMacro[noprint]{\fxgermannotename}
 % \DescribeMacro[noprint]{\fxgermannotesname}
 % \DescribeMacro[noprint]{\fxgermanwarningname}
@@ -1316,7 +1312,6 @@
 % \DescribeMacro[noprint]{\fxgermanerrorsname}
 % \DescribeMacro[noprint]{\fxgermanfatalname}
 % \DescribeMacro[noprint]{\fxgermanfatalsname}
-% \DescribeMacro[noprint]{\germanlistfixmename}
 % \DescribeMacro[noprint]{\fxdanishnotename}
 % \DescribeMacro[noprint]{\fxdanishnotesname}
 % \DescribeMacro[noprint]{\fxdanishwarningname}
@@ -1325,7 +1320,6 @@
 % \DescribeMacro[noprint]{\fxdanisherrorsname}
 % \DescribeMacro[noprint]{\fxdanishfatalname}
 % \DescribeMacro[noprint]{\fxdanishfatalsname}
-% \DescribeMacro[noprint]{\danishlistfixmename}
 % \DescribeMacro[noprint]{\fxcroatiannotename}
 % \DescribeMacro[noprint]{\fxcroatiannotesname}
 % \DescribeMacro[noprint]{\fxcroatianwarningname}
@@ -1334,14 +1328,20 @@
 % \DescribeMacro[noprint]{\fxcroatianerrorsname}
 % \DescribeMacro[noprint]{\fxcroatianfatalname}
 % \DescribeMacro[noprint]{\fxcroatianfatalsname}
-% \DescribeMacro[noprint]{\croatianlistfixmename}
 % \fx's language control has been described in section
 % \sectionref{sec:manual:i18n}. For every supported language \meta{lang}, a
 % number of macros define the language-dependent part of \fx. The commands
 % \cs{fx}\meta{lang}\texttt{notename}, \cs{fx}\meta{lang}\texttt{notesname},
 % and their equivalent for the other note levels define the singular and
 % plural forms of the note names.\\
-% \DescribeMacro{\...listfixmename}
+% \DescribeMacro[noindex]{\...listfixmename}
+% \DescribeMacro[noprint]{\englishlistfixmename}
+% \DescribeMacro[noprint]{\frenchlistfixmename}
+% \DescribeMacro[noprint]{\spanishlistfixmename}
+% \DescribeMacro[noprint]{\italianlistfixmename}
+% \DescribeMacro[noprint]{\germanlistfixmename}
+% \DescribeMacro[noprint]{\danishlistfixmename}
+% \DescribeMacro[noprint]{\croatianlistfixmename}
 % The title for the list of fixmes is defined by the command
 % \cs{}\meta{lang}\texttt{listfixmename}.
 %
